@@ -1,3 +1,8 @@
+2011-06-27 Stefan Bidigaray <stefanbidi@gmail.com>
+
+	* Source/CFString.c: Implemented CFStringCreateWithBytesNoCopy() and
+	fixed a bug in CFStringCreateByCombiningStrings().
+
 2011-06-26 Stefan Bidigaray <stefanbidi@gmail.com>
 
 	* Source/CFString.c: Implement CFStringPad().
